# option-profit-calc

./: README.md  company-info.csv  nasdaq_100_stocks.csv  option-scanner ideas.docx  option-scanner ideas_1.docx  pyproject.toml  requirements.txt  russell_2000_stocks.csv  s&p_500_stocks.csv  scrap.py  wip.docx  ~$tion-scanner ideas.docx  ~$tion-scanner ideas_1.docx  ~$wip.docx  ~WRL0003.tmp
flaskr/: __init__.py  auth.py  blog.py  config.py  db.py  greeks.py  helpers.py  options.py  schema.sql  stocks.py  utils.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: index.html  resume.html
flaskr/templates/options/: max-pain.html  profit-calc.html  scanner.html
flaskr/templates/stocks/: bubbles.html  monte-carlo.html  watchlist.html
flaskr/templates/utils/: update-db.html
instance/: flaskr.sqlite
tests/: conftest.py  test_blog.py
